--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "webpack-dev-server": "^4.11.1"
     },
     "dependencies": {
+        "animate.css": "^4.1.1",
         "react": "^18.2.0",
+        "react-animation-on-scroll": "^5.1.0",
         "react-dom": "^18.2.0"
     }
 }
